--- a/frutas.html
+++ b/frutas.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-94S49Q36DK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-94S49Q36DK');
+</script>
     <link rel="stylesheet" href="frutas.css">
     <link rel="img" href=".../imagenes">
     <meta charset="UTF-8">
@@ -244,4 +253,5 @@
     </article>
 </body>
 </html>
+
 
