--- a/frutas.html
+++ b/frutas.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Google tag (gtag.js) -->
+    <link rel="stylesheet" href="frutas.css">
+    <link rel="img" href=".../imagenes">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Categorias</title>
+        <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-94S49Q36DK"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -10,11 +15,6 @@
 
   gtag('config', 'G-94S49Q36DK');
 </script>
-    <link rel="stylesheet" href="frutas.css">
-    <link rel="img" href=".../imagenes">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
 </head>
 <body>
     <h2 class="h2v2">Frutas Comunes</h2>
@@ -253,5 +253,6 @@
     </article>
 </body>
 </html>
+
 
 
